<resources>
    <string name="app_name">pqca</string>
    <string name="start_text">常駐開始</string>
    <string name="transparency_text">透明化</string>
    <string name="minimize_text">最小化</string>
    <string name="end_text">常駐終了</string>
    <string name="test_text">TEST</string>
    <string name="notification_title">サービス実行中</string>
    <string name="notification_text">終了するときは「常駐終了」ボタンを押してね！</string>
    <string name="start_toast">サービスの常駐を開始します</string>
    <string name="end_toast">サービスの常駐を終了しました</string>
    <string name="capture_text">SS取得</string>
    <string name="clear_text">クリア</string>
    <string name="ftm1x_text">係数1倍</string>
    <string name="ftm4x_text">係数4倍</string>
    <string name="ftm5x_text">係数5倍</string>
    <string name="ftm6x_text">係数6倍</string>
    <string name="wildOff_text">ワイルドなし</string>
    <string name="wildOn_text">ワイルドあり</string>
    <string name="maxTrace3_text"> 3</string>
    <string name="maxTrace4_text"> 4</string>
    <string name="maxTrace5_text"> 5</string>
    <string name="maxTrace8_text"> 8</string>
    <string name="maxTrace10_text">10</string>
    <string name="maxTrace12_text">12</string>
    <string name="red_text_on">赤ON</string>
    <string name="red_text_off">赤OFF</string>
    <string name="blue_text_on">青ON</string>
    <string name="blue_text_off">青OFF</string>
    <string name="green_text_on">緑ON</string>
    <string name="green_text_off">緑OFF</string>
    <string name="yellow_text_on">黄ON</string>
    <string name="yellow_text_off">黄OFF</string>
    <string name="purple_text_on">紫ON</string>
    <string name="purple_text_off">紫OFF</string>
    <string name="exact_text">厳密解探索</string>
    <string name="heuristic_text">ヒューリスティック探索</string>
</resources>
